phSolver: link against SCOREC/core/phasta for phstream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,11 @@ endif(PHASTA_USE_SVLS)
 
 OPTION(PHASTA_BUILD_SOLVERS "Build Solvers" ON)
 if(PHASTA_BUILD_SOLVERS)
+        if(PHASTA_CHEF_ENABLED)
+          message(STATUS "PHASTA_CHEF_ENABLED SCOREC_PREFIX ${SCOREC_PREFIX}")
+                find_package(SCOREC 2.1.0 REQUIRED CONFIG
+                    PATHS ${SCOREC_PREFIX} NO_DEFAULT_PATH)
+        endif(PHASTA_CHEF_ENABLED)
 	set(PHASTA_BUILD_PHASTAIO ON)
 	if(PHASTA_USE_MPI)
 		set(PHASTA_BUILD_METIS ON)
@@ -129,6 +134,7 @@ if(PHASTA_BUILD_SOLVERS)
 	list(APPEND PHASTA_INCLUDES "${PHASTA_SOURCE_DIR}/phSolver/common")
 	include_directories(${PHASTA_INCLUDES})
 	add_subdirectory(phSolver)
+        add_subdirectory(checkphasta)
 #TODO
 endif(PHASTA_BUILD_SOLVERS)
 
@@ -155,6 +161,4 @@ endif(PHASTA_BUILD_M2NFixBnd)
 if(EXISTS ${PHASTA_SOURCE_DIR}/phNSpre)
 	add_subdirectory(phNSpre)
 endif(EXISTS ${PHASTA_SOURCE_DIR}/phNSpre)
-
-add_subdirectory(checkphasta)
 
