--- a/phSolver/common/CMakeLists.txt
+++ b/phSolver/common/CMakeLists.txt
@@ -15,13 +15,7 @@ if(PHASTA_USE_MPI)
   )
 endif(PHASTA_USE_MPI)
 
-if(PHASTA_CHEF_ENABLED)
-  set(PHASTA_COMMON_LIBS ${PHASTA_COMMON_LIBS} phstream)
-  set(PHASTA_COMMON_INCLUDE_DIRS
-    ${PHASTA_COMMON_INCLUDE_DIRS}
-    ${PHASTACHEF_SOURCE_DIR}/phstream
-  )
-else()
+if(NOT PHASTA_CHEF_ENABLED)
   set(SRC_FILES ${SRC_FILES} phstreamEmpty/phstreamEmpty.cc)
   set(PHASTA_COMMON_INCLUDE_DIRS
       ${PHASTA_COMMON_INCLUDE_DIRS}
@@ -37,7 +31,10 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES XL)
         set_source_files_properties(petscdbg.f PROPERTIES COMPILE_FLAGS
 "-qsuffix=cpp=f")
 endif(CMAKE_Fortran_COMPILER_ID MATCHES XL)
-TARGET_LINK_LIBRARIES(common ${PHASTA_COMMON_LIBS})
+TARGET_LINK_LIBRARIES(common PUBLIC ${PHASTA_COMMON_LIBS})
+if(PHASTA_CHEF_ENABLED)
+  TARGET_LINK_LIBRARIES(common PUBLIC SCOREC::ph)
+endif()
 
 configure_file(
   "${CMAKE_CURRENT_SOURCE_DIR}/phastaCommonConfig.cmake.in"
