--- a/phSolver/incompressible/test/CMakeLists.txt
+++ b/phSolver/incompressible/test/CMakeLists.txt
@@ -1,20 +1,16 @@
-macro(ic_serial_test name exe)
-  set(tname incompressible_${solver}_${name})
-  add_test( NAME ${tname} COMMAND ${exe} ${ARGN} )
-  set_tests_properties(${tname} PROPERTIES LABELS "phsolver_incompressible")
-endmacro(ic_serial_test)
-
 set(CDIR ${CASES}/incompressible)
 
-ic_serial_test(copyInpCfg
-  cp ${PHASTA_SOURCE_DIR}/phSolver/common/input.config ${CDIR})
+add_test(NAME incompressible_copyInpCfg
+  COMMAND cp ${PHASTA_SOURCE_DIR}/phSolver/common/input.config ${CDIR})
 
 if(PHASTA_USE_SVLS)
   set(solver svls)
-  ic_serial_test(solverInp ln -snf ${CDIR}/solver.inp.svls ${CDIR}/solver.inp)
+  add_test(NAME incompressible_${solver}_solverInp
+    COMMAND ln -snf ${CDIR}/solver.inp.svls ${CDIR}/solver.inp)
   include(testing.cmake)
 endif()
 
 set(solver leslib)
-ic_serial_test(solverInp ln -snf ${CDIR}/solver.inp.libles ${CDIR}/solver.inp)
+add_test(NAME incompressible_${solver}_solverInp
+  COMMAND ln -snf ${CDIR}/solver.inp.libles ${CDIR}/solver.inp)
 include(testing.cmake)
