phSolver: update input.config with git hash when there is a commit

--- a/phSolver/CMakeLists.txt
+++ b/phSolver/CMakeLists.txt
@@ -2,6 +2,9 @@ project(phSolver)
 set(CMAKE_Fortran_MODULE_DIRECTORY ${phSolver_BINARY_DIR}/modules)
 include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+include(GetGitRevisionDescription)
+
 set(CASES "/path/to/test/cases/"
   CACHE string
   "path to the test cases")
