phastaIO: api for recording stats

--- a/phastaIO/CMakeLists.txt
+++ b/phastaIO/CMakeLists.txt
@@ -12,7 +12,7 @@ FortranCInterface_Header(FCMangle.h)
 include_directories("${phastaIO_BINARY_DIR}")
 add_definitions(-DMPICH_SKIP_MPICXX)
 add_definitions(-DOMPI_SKIP_MPICXX=1)
-set(SRC_FILES phiotmrc.cc phastaIO.cc)
+set(SRC_FILES phiotmrc.cc phastaIO.cc phiostats.c phiompi.c)
 
 ADD_LIBRARY(phastaIO ${SRC_FILES})
 target_link_libraries(phastaIO ${MPI_C_LIBRARIES})
