common/test: forgot to list the file in cmakelists.txt

--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
 
 setup_exe(phIOreadheader phIOreadheader.cc)
 setup_exe(phIOwriteReadZeroSz phIOwriteReadZeroSz.cc)
+setup_exe(phIOwriteFields phIOwriteFields.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
 setup_exe(phIOreadIlwork phIOreadIlwork.cc)
 setup_exe(phIOposixMultiTopo phIOposixMultiTopo.cc)
