make coprocessing disable'able

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -145,6 +145,7 @@ MATERIAL PROPERTIES
 
 OUTPUT CONTROL
 {
+     Enable Coprocessing: 0
      Number of Timesteps between Restarts: 500 #replaces nout/ntout
      Number of SyncIO Files: 1        # nsynciofiles
      Verbosity Level: 3                        #replaces necho
