existing file changes to pair with libCEED (missing driveCeed.c lccommon.h advection.h (all the compressible directory) and CMakeFiles/FindlibCEED.cmake)

--- a/phSolver/CMakeLists.txt
+++ b/phSolver/CMakeLists.txt
@@ -22,6 +22,15 @@ if(IS_JEDS_BRANCH)
 endif()
 endif(PHASTA_USE_PETSC)
 
+option(PHASTA_USE_CEED "Use libCEED" OFF)
+if(PHASTA_USE_CEED)
+	find_package(libCEED REQUIRED)
+	link_directories(${CEED_LIBRARY_DIRS})
+	include_directories(${CEED_INCLUDE_DIRS})
+	add_definitions(-DHAVE_CEED)
+	message(WARNING "${CEED_LIBRARIES}")
+endif(PHASTA_USE_CEED)
+
 add_subdirectory(common)
 option(PHASTA_INCOMPRESSIBLE "Build the incompressible solver" OFF)
 option(PHASTA_COMPRESSIBLE "Build the compressible solver" ON)
